# RED-V_SiFive_RISC-V_FE310_SoC

./: Build.sh  CMakeLists.txt  Makefile  README.md  Rebuild.sh  RedV.jdebug  RedV.jflash  e310x.svd
.github/workflows/: RED-V_SiFive_RISC-V_FE310_SoC.yml
Code/: FE310.h  Memory_Map.ld  Platform_Types.h  boot.s  core.s  intvect.c  main.c  tasks.c
Code/Mcal/: Clock.c  Mcu.c  SPI1.c  SPI1.h  mtimer.c  mtimer.h  riscv-csr.h
Code/OSEK/: OsCore.c  OsGenMac.h  OsInternal.h  OsSched.c  OsTypes.h
Code/OSEK/HwPlatform/RISC-V/: OsAsm.s  OsDummy.asm  OsGenCfg.h  OsHwPltfm.c  OsHwPltfm.h
Code/Services/FIFO/: FIFO.c  FIFO.h
Code/Services/FSM/: Fsm.c  Fsm.h  Fsm_mac.h
Code/Services/IPC/: IPC.c  IPC.h
Code/Startup/: boot.s  intvect.c
cmake/: toolchain-unix.cmake
